# ant-node

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: bootstrap_peers.toml  production.toml
deploy/scripts/: spawn-nodes.sh
deploy/terraform/cloud-init/: worker.yml
docs/: DESIGN.md  REPLICATION_DESIGN.md
docs/adr/: ADR-0003-full-node-detection-and-eviction.md  ADR-0004-amendment1-implementation-notes.md  ADR-0004-commitment-bound-quote-pricing.md  README.md  implementation-slices-adr-0004.md
scripts/testnet/: build-and-deploy.sh  deploy-all.sh  spawn-nodes.sh  start-genesis.sh  testnet-endurance.sh
src/: config.rs  devnet.rs  lib.rs  logging.rs  node.rs
src/ant_protocol/: chunk.rs  mod.rs
src/client/: chunk_protocol.rs  data_types.rs  mod.rs  quantum.rs  self_encrypt.rs
src/metrics/: aggregator.rs  prometheus.rs
src/payment/: cache.rs  metrics.rs  mod.rs  pricing.rs  proof.rs  quote.rs  single_node.rs  verifier.rs  wallet.rs
src/replication/: admission.rs  audit.rs  bootstrap.rs  commitment.rs  commitment_state.rs  config.rs  fresh.rs  mod.rs  neighbor_sync.rs  paid_list.rs  paid_pin_audit.rs  possession.rs  protocol.rs  pruning.rs  quorum.rs  scheduling.rs  storage_commitment_audit.rs  types.rs
src/storage/: handler.rs  lmdb.rs
src/upgrade/: apply.rs  binary_cache.rs  cache_dir.rs  monitor.rs
systemd/: saorsa-node.service
tests/: poc_commitment_audit_attacks.rs  poc_d1_bounded_queues.rs
tests/e2e/: anvil.rs  f2_f5_pay_yourself.rs  integration_tests.rs  live_testnet.rs  merkle_payment.rs  mod.rs  payment_flow.rs  poc_f2_f5_price_floor.rs  replication.rs  security_attacks.rs  testnet.rs
tests/e2e/data_types/: chunk.rs
